@@ -30,6 +30,16 @@ Function Get-Env-Boolean{
   return $args[1]
 }
 
+$COMMOM_CONF_FILE = $SCRIPTS_HOME + '\common.conf.ps1'
+$COMMOM_CONF_FILE = Get-Env COMMON_CONF $COMMOM_CONF_FILE
+if ([System.IO.File]::Exists($COMMOM_CONF_FILE)) {
+    . $COMMOM_CONF_FILE
+} else {
+    if (Test-Path env:COMMON_CONF) {
+        Write-Output "Config file not found $env:COMMON_CONF"
+    }
+}
+
 $global:SECMGR = Get-Env-Boolean SECMGR $false
 $global:DEBUG_MODE=Get-Env DEBUG $false
 $global:DEBUG_PORT=Get-Env DEBUG_PORT 8787
@@ -101,6 +111,38 @@ Function Get-Java-Opts {
 	return $JAVA_OPTS
 }
 
+Function SetPackageAvailable($packageName) {
+    # java -version actually writes what we all read in our terminals to stderr, not stdout!
+    # So we redirect it to stdout with 2>&1 before piping to Out-String and Select-String
+    $PACKAGE_AVAILABLE = !(& $JAVA "--add-opens=$packageName=ALL-UNNAMED" -version 2>&1 | Out-String -Stream | Select-String 'WARNING' -SimpleMatch -Quiet)
+    return $PACKAGE_AVAILABLE
+}
+
+Function SetEnhancedSecurityManager {
+    $ENHANCED_SM = $false
+    & $JAVA "-Djava.security.manager=allow" -version >$null 2>&1
+    if ($LastExitCode -eq 0){
+        $ENHANCED_SM = $true
+    }
+    return $ENHANCED_SM
+}
+
+Function Get-Security-Manager-Default {
+Param(
+   [bool]$enhancedSM
+
+) #end param
+    if($PRESERVE_JAVA_OPTS -eq 'true') {
+        return $null
+    }
+    $SECURITY_MANAGER_CONFIG_OPTION = @()
+    if ($enhancedSM) {
+        # Needed to be able to install Security Manager dynamically since JDK18
+        $SECURITY_MANAGER_CONFIG_OPTION += "-Djava.security.manager=allow"
+    }
+    return $SECURITY_MANAGER_CONFIG_OPTION
+}
+
 Function SetModularJDK {
     $MODULAR_JDK = $false
     & $JAVA --add-modules java.se -version >$null 2>&1
@@ -129,9 +171,42 @@ Param(
                   }
               }
         }
-        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
-        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
-        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED"
+        # Set default modular jdk options
+        # Needed by the iiop-openjdk subsystem
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=java.desktop/sun.awt=ALL-UNNAMED"
+        # Needed to instantiate the default InitialContextFactory implementation used by the
+        # Elytron subsystem dir-context and core management ldap-connection resources
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED"
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED"
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED"
+        # Needed by Netty
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED"
+        # Needed by WildFly Elytron Extension
+        $packageName = "java.base/com.sun.net.ssl.internal.ssl"
+        $PACKAGE_AVAILABLE = setPackageAvailable($packageName)
+        if($PACKAGE_AVAILABLE) {
+            $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=$packageName=ALL-UNNAMED"
+        }
+        # Needed if Hibernate applications use Javassist
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.lang=ALL-UNNAMED"
+        # Needed by the MicroProfile REST Client subsystem
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
+        # Needed for marshalling of proxies
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+        # Needed by JBoss Marshalling
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.io=ALL-UNNAMED"
+        # Needed by WildFly Http Client
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.net=ALL-UNNAMED"
+        # Needed by WildFly Security Manager
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.security=ALL-UNNAMED"
+        # Needed for marshalling of collections
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.util=ALL-UNNAMED"
+        # Needed for marshalling of concurrent collections
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
+        # EE integration with sar mbeans requires deep reflection in javax.management
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.management/javax.management=ALL-UNNAMED"
+        # InitialContext proxy generation requires deep reflection in javax.naming
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.naming/javax.naming=ALL-UNNAMED"
     }
     return $DEFAULT_MODULAR_JVM_OPTIONS
 }
@@ -157,6 +232,8 @@ Param(
   $MODULAR_JDK = SetModularJDK
   $JAVA_OPTS = Get-Java-Opts #takes care of looking at defind settings and/or using env:JAVA_OPTS
   $DEFAULT_MODULAR_JVM_OPTS = Get-Default-Modular-Jvm-Options -opts $JAVA_OPTS -modularJDK $MODULAR_JDK
+  $ENHANCED_SM = SetEnhancedSecurityManager
+  $SECURITY_MANAGER_CONFIG_OPT = Get-Security-Manager-Default -enhancedSM $ENHANCED_SM
 
   $PROG_ARGS = @()
   if ($JAVA_OPTS -ne $null){
@@ -164,6 +241,9 @@ Param(
   }
   if ($DEFAULT_MODULAR_JVM_OPTS -ne $null){
   	$PROG_ARGS += $DEFAULT_MODULAR_JVM_OPTS
+  }
+  if ($SECURITY_MANAGER_CONFIG_OPT -ne $null){
+  	$PROG_ARGS += $SECURITY_MANAGER_CONFIG_OPT
   }
   if ($logFile){
   	$PROG_ARGS += "-Dorg.jboss.boot.log.file=$logFile"
@@ -297,10 +377,14 @@ Function Start-WildFly-Process {
 			pushd $JBOSS_HOME
 			& $JAVA $programArguments
 			if ($LastExitCode -eq 10){ # :shutdown(restart=true) was called
-			    Write-Host "Restarting application server..."
+			    Write-Host "INFO: Restarting..."
 				Start-WildFly-Process -programArguments $programArguments
-			}
-
+			} elseif ($LastExitCode -eq 20) { # :shutdown(perform-installation=true) was called
+                Write-Host "INFO: Executing the installation manager"
+                & "$JBOSS_HOME\bin\installation-manager.ps1" -installationHome "$JBOSS_HOME" -instMgrLogProperties "$JBOSS_CONFIG_DIR\logging.properties"
+                Write-Host "INFO: Restarting..."
+                Start-WildFly-Process -programArguments $programArguments
+            }
 		}finally{
 			popd
 		}
